maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:43: error: not found: value y
  if(y != 0 && !hasTopWall(x, y) && getIndication(x, y - 1) < cur){
     ^JediEscaper:43: error: not found: value x
  if(y != 0 && !hasTopWall(x, y) && getIndication(x, y - 1) < cur){
                           ^JediEscaper:43: error: not found: value y
  if(y != 0 && !hasTopWall(x, y) && getIndication(x, y - 1) < cur){
                              ^JediEscaper:43: error: not found: value x
  if(y != 0 && !hasTopWall(x, y) && getIndication(x, y - 1) < cur){
                                                  ^JediEscaper:43: error: not found: value y
  if(y != 0 && !hasTopWall(x, y) && getIndication(x, y - 1) < cur){
                                                     ^JediEscaper:47: error: not found: value y
  if(y != getWorldHeight() - 1 && !hasBottomWall(x, y) && getIndication(x, y + 1) < cur){
     ^JediEscaper:47: error: not found: value x
  if(y != getWorldHeight() - 1 && !hasBottomWall(x, y) && getIndication(x, y + 1) < cur){
                                                 ^JediEscaper:47: error: not found: value y
  if(y != getWorldHeight() - 1 && !hasBottomWall(x, y) && getIndication(x, y + 1) < cur){
                                                    ^JediEscaper:47: error: not found: value x
  if(y != getWorldHeight() - 1 && !hasBottomWall(x, y) && getIndication(x, y + 1) < cur){
                                                                        ^JediEscaper:47: error: not found: value y
  if(y != getWorldHeight() - 1 && !hasBottomWall(x, y) && getIndication(x, y + 1) < cur){
                                                                           ^JediEscaper:51: error: not found: value x
  if(x != 0 && !hasLeftWall(x, y) && getIndication(x - 1, y) < cur){
     ^JediEscaper:51: error: not found: value x
  if(x != 0 && !hasLeftWall(x, y) && getIndication(x - 1, y) < cur){
                            ^JediEscaper:51: error: not found: value y
  if(x != 0 && !hasLeftWall(x, y) && getIndication(x - 1, y) < cur){
                               ^JediEscaper:51: error: not found: value x
  if(x != 0 && !hasLeftWall(x, y) && getIndication(x - 1, y) < cur){
                                                   ^JediEscaper:51: error: not found: value y
  if(x != 0 && !hasLeftWall(x, y) && getIndication(x - 1, y) < cur){
                                                          ^JediEscaper:55: error: not found: value x
  if(x != getWorldWidth() - 1 && !hasRightWall(x, y) && getIndication(x + 1, y) < cur){
     ^JediEscaper:55: error: not found: value x
  if(x != getWorldWidth() - 1 && !hasRightWall(x, y) && getIndication(x + 1, y) < cur){
                                               ^JediEscaper:55: error: not found: value y
  if(x != getWorldWidth() - 1 && !hasRightWall(x, y) && getIndication(x + 1, y) < cur){
                                                  ^JediEscaper:55: error: not found: value x
  if(x != getWorldWidth() - 1 && !hasRightWall(x, y) && getIndication(x + 1, y) < cur){
                                                                      ^JediEscaper:55: error: not found: value y
  if(x != getWorldWidth() - 1 && !hasRightWall(x, y) && getIndication(x + 1, y) < cur){
                                                                             ^JediEscaper:60: error: too many arguments for method isOverBaggle: ()Boolean
  if(!isOverBaggle(getX(), getY()))
                  ^